-CRUD de usuários = OK -CRUD de livros   = OK
-Funcionalidades do Bibliotecário = 100%
-Funcionalidades do Balconista    = 50%

-Melhoras nos botões de Ativar/Inativar livros;
-Melhoras no posicionamento do section;
-Adicionado as colunas datacad, dataalt, na tabela de livros;
-Adicionado as colunas datacad, dataalt e datanasc na tabela de usuários;
-Feito as alterações nas operações CRUD dos usuários/livros e modo a deixar salvos as datas corretamente...
-Adicionado tela de consulta de acervo próprio pro balconista.
-Refeito a tela de início, melhorei posicionamento da imagem de início, NOVAMENTE.
-Melhorias nos Beans;
-Realizado ?faces-redirect=true para atualização da url sempre;
_Realizado conferência nas mensagens de retornos.
-Realizado alterações no front-end quanto a validação dos maxlenght dos campos;
-Realizado alteração nos inputs de datas e outputs também;
-Melhoria nos posicionamentos dos painéis de controle do balconista e bibliotecário.

--- a/web/acessoBibliotecario.xhtml
+++ b/web/acessoBibliotecario.xhtml
@@ -58,6 +58,20 @@
                 background: white;
                 display: none;
             }
+
+            .section {
+                position: fixed;
+                top: -126px;
+                bottom: 0;
+                left: 0;
+                right: 1150px;
+                margin: auto;
+                width: 200px;
+                height: 300px;
+                padding: 15px;
+                border-radius: 5px;
+                color: black;
+            }
         </style>
     </meta>
 
@@ -119,39 +133,47 @@
     </div>
 
     <i><h1 align="center"> BiblioTec </h1></i>
-    <p:menubar style="align-items: center">
-        <p:menuitem value="SAIR" url="gestaoBibliotecas.xhtml"></p:menuitem>
-        <p:menuitem value="AJUDA?" url="javascript: abrir();"></p:menuitem>
-    </p:menubar>
-    <section alig="center" class="row">
-        <div class="jumbotron">
-            <h:form id="telaBibliotecario">
-                <div class="form-group">
-                    <h5 align="center">Acervo de Livros</h5><br/>
-                </div>
-                <div class="form-group">
+    <div id="menu" class="menu">
+        <p:menubar style="align-items: center">
+            <p:menuitem value="SAIR" url="gestaoBibliotecas.xhtml"></p:menuitem>
+            <p:menuitem value="AJUDA?" url="javascript: abrir();"></p:menuitem>
+        </p:menubar>
+    </div>
+    <div id="section" class="section">
+        <section alig="center" class="row">
+            <div class="jumbotron">
+                <h:form id="telaBibliotecario">
                     <div class="form-group">
-                        <h:commandButton value="Cadastrar" class="btn btn-block btn-primary"
-                                         action="cadastrarLivro?faces-redirect=true" url="cadastrarLivro.xhtml"></h:commandButton>
+                        <h5 align="center">Acervo de Livros</h5><br/>
                     </div>
                     <div class="form-group">
-                        <h:commandButton value="Consultar" class="btn btn-block btn-primary"
-                                         action="consultarLivro?faces-redirect=true" url="consultarLivro.xhtml"></h:commandButton>
+                        <div class="form-group">
+                            <h:commandButton value="Cadastrar" class="btn btn-block btn-primary"
+                                             action="cadastrarLivro?faces-redirect=true"
+                                             url="cadastrarLivro.xhtml"></h:commandButton>
+                        </div>
+                        <div class="form-group">
+                            <h:commandButton value="Consultar" class="btn btn-block btn-primary"
+                                             action="consultarLivro?faces-redirect=true"
+                                             url="consultarLivro.xhtml"></h:commandButton>
+                        </div>
+                        <div class="form-group">
+                            <h:commandButton value="Alterar" class="btn btn-block btn-primary"
+                                             action="alterarLivro?faces-redirect=true"
+                                             url="cadastrarLivro.xhtml"></h:commandButton>
+                        </div>
+                        <div class="form-group">
+                            <h:commandButton value="Deletar" class="btn btn-block btn-primary"
+                                             action="deletarLivro?faces-redirect=true"
+                                             url="deletarLivro.xhtml"></h:commandButton>
+                        </div>
+                        <div class="form-group">
+                            <p> Perfil: Bibliotecário</p>
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <h:commandButton value="Alterar" class="btn btn-block btn-primary"
-                                         action="alterarLivro?faces-redirect=true" url="cadastrarLivro.xhtml"></h:commandButton>
-                    </div>
-                    <div class="form-group">
-                        <h:commandButton value="Deletar" class="btn btn-block btn-primary"
-                                         action="deletarLivro?faces-redirect=true" url="deletarLivro.xhtml"></h:commandButton>
-                    </div>
-                    <div class="form-group">
-                        <p> Perfil: Bibliotecário</p>
-                    </div>
-                </div>
-            </h:form>
-        </div>
-    </section>
+                </h:form>
+            </div>
+        </section>
+    </div>
 </h:body>
 </html>
