--- a/web/consultaUsuario.xhtml
+++ b/web/consultaUsuario.xhtml
@@ -101,9 +101,9 @@
                 <div class="form-group">
                     <h:form id="telaConsultaUsuarios">
                         <div class="form-group">
-                            <h:outputLabel value="Nome do Usuário"/>
+                            <h:outputLabel value="Nome do Usuário, Username, E-Mail ou CPF"/>
                             <p:inputText value="#{c_Usuario.user.nome}" class="form-control" required="false"
-                                         placeholder="Insira o nome do usuário"></p:inputText>
+                                         maxlength="100" placeholder="Insira o nome do usuário, username, e-mail ou cpf"></p:inputText>
                         </div>
                         <div class="form-group">
                             <h:commandButton value="Buscar" class="btn btn-block btn-primary"
