--- a/web/consultarLivro.xhtml
+++ b/web/consultarLivro.xhtml
@@ -100,9 +100,9 @@
                 <div class="form-group">
                     <h:form id="telaConsultaBibliotecario">
                         <div class="form-group">
-                            <h:outputLabel value="Título"/>
+                            <h:outputLabel value="Título, Autor ou Editora"/>
                             <p:inputText value="#{c_Livro.livro.titulo}" class="form-control" required="false"
-                                         placeholder="Insira o título do livro"></p:inputText>
+                                         maxlength="100" placeholder="Insira o título, autor ou editora do livro desejado"></p:inputText>
                         </div>
                         <div class="form-group">
                             <h:commandButton value="Buscar Livro" class="btn btn-block btn-primary"
