--- a/web/acessoBalconista.xhtml
+++ b/web/acessoBalconista.xhtml
@@ -164,16 +164,16 @@
                     <div class="form-group">
                         <div class="form-group">
                             <h:commandButton value="Cadastrar" class="btn btn-block btn-primary"
-                                             action="acessoBalconista?faces-redirect=true"></h:commandButton>
+                                             action="cadastrarEmprestimo?faces-redirect=true"></h:commandButton>
 
                             <h:commandButton value="Consultar" class="btn btn-block btn-primary"
-                                             action="acessoBalconista?faces-redirect=true"></h:commandButton>
+                                             action="consultarEmprestimo?faces-redirect=true"></h:commandButton>
 
                             <h:commandButton value="Alterar" class="btn btn-block btn-primary"
-                                             action="acessoBalconista?faces-redirect=true"></h:commandButton>
+                                             action="alterarEmprestimo?faces-redirect=true"></h:commandButton>
 
                             <h:commandButton value="Deletar" class="btn btn-block btn-primary"
-                                             action="acessoBalconista?faces-redirect=true"></h:commandButton>
+                                             action="deletarEmprestimo?faces-redirect=true"></h:commandButton>
                         </div>
                     </div>
                     <div class="form-group">
