--- a/web/consultarLivro.xhtml
+++ b/web/consultarLivro.xhtml
@@ -160,6 +160,10 @@
                             <f:facet name="header">Status</f:facet>
                             #{livro.status}
                         </p:column>
+                        <p:column>
+                            <f:facet name="header">Dispon</f:facet>
+                            #{livro.disponibilidade}
+                        </p:column>
                     </p:dataTable>
                 </div>
             </section>
