--- a/web/editarUsuario.xhtml
+++ b/web/editarUsuario.xhtml
@@ -99,7 +99,7 @@
                 Para alterar os dados do usuário, siga os seguintes passos:<br/>
                 1) Use o botão <b>Buscar</b> para filtrar os dados do usuário que deseja alterar.<br/>
                 2) <b>Preencha</b> apenas o que deseja alterar.<br/>
-                3) <b>Informe o ID</b> do usuário e clique em <b> Alterar </b> para salvar as novas informações.
+                3) <b>Informe o Id e o Status</b> do usuário e clique em <b> Alterar </b> para salvar as novas informações.
             </p>
         </p>
     </div>
