--- a/web/acessoBalconista.xhtml
+++ b/web/acessoBalconista.xhtml
@@ -20,7 +20,7 @@
                 top: 140px;
                 bottom: 0;
                 left: 0;
-                right: 0;
+                right: -500px;
                 margin: auto;
                 width: 600px;
                 height: 420px;
