--- a/web/deletarLivro.xhtml
+++ b/web/deletarLivro.xhtml
@@ -190,6 +190,10 @@
                             <f:facet name="header">Status</f:facet>
                             #{livro.status}
                         </p:column>
+                        <p:column>
+                            <f:facet name="header">Dispon</f:facet>
+                            #{livro.disponibilidade}
+                        </p:column>
                     </p:dataTable>
                     <h:form id="deletarLivro">
                         <div class="form-group">
